--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>publico</title>
 </head>
 <body>
-    <h1>CONTENIDO PUBLICO</h1>
+    <h1>CONTENIDO PUBLICOoooooooooaaaaaaaaaaaaaaaoo</h1>
     <hr>
 </body>
 </html>
